--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,12 +13,12 @@ spring:
       default-topic: new-tweet
     consumer:
       bootstrap-servers: localhost:9092,localhost:9093
-      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       group-id: library-events-listener-group
     producer:
       bootstrap-servers: localhost:9092,localhost:9093
-      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
       properties:
         acks: all
