--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,10 @@ logging:
         security:
           web:
             FilterChainProxy: DEBUG
-
-
-
+tweet:
+  app:
+    jwtSecret: dokfdsjgfdslkgjfdkkgewiukhjsdkjhf
+    jwtExpirationMs: 300000
 ---
 spring:
   config:
