updated jwtExpirationMs to 2hrs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ logging:
 tweet:
   app:
     jwtSecret: dokfdsjgfdslkgjfdkkgewiukhjsdkjhf
-    jwtExpirationMs: 300000
+    jwtExpirationMs: 7200000
 ---
 spring:
   config:
